buildscript {
    repositories {
        maven { url = 'https://repo.spring.io/snapshot' }
        maven { url = 'https://repo.spring.io/libs-milestone' }
        gradlePluginPortal()
    }
}

plugins {
    id 'java-library'
    id("org.springframework.boot") version "4.0.3"
    id 'jacoco'
}

apply plugin: 'io.spring.dependency-management'

group = 'org.learnings'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-validation"

    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    implementation 'io.micrometer:micrometer-registry-prometheus:1.16.4'
    implementation 'io.prometheus:simpleclient_hotspot:0.16.0'

    testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
    test.useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

wrapper {
    gradleVersion = "9.2.0"
}

apply from: 'gradle/jacoco.gradle'
